--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Landing</title>
+    body{
+        background-color: crimson;
+        color:darkgoldenrod;
+    }
 </head>
 <body>
     <h1>
