--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Landing</title>
+    <style>
     body{
         background-color: crimson;
         color:darkgoldenrod;
     }
+    </style>
 </head>
 <body>
     <h1>
