Added noscript tag

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             a.appendChild(r);
         })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
     </script>
+    <noscript>
+        Tá bugado, Berg! Usa outro browser.
+    </noscript>
 </head>
 <body>
     <h1>
