--- a/index.html
+++ b/index.html
@@ -11,8 +11,18 @@
         color:darkgoldenrod;
     }
     </style>
-
     
+    <!-- Hotjar Tracking Code for emmanuelcsj.github.io -->
+    <script>
+        (function(h,o,t,j,a,r){
+            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+            h._hjSettings={hjid:1421484,hjsv:6};
+            a=o.getElementsByTagName('head')[0];
+            r=o.createElement('script');r.async=1;
+            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+    </script>
     <noscript>
         Tá bugado, Berg! Usa outro browser.
     </noscript>
