Added pricing.html and link from front page

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Landing</title>
+    <title>Reliqua</title>
     <style>
     body{
         background-color: crimson;
         color:darkgoldenrod;
     }
     </style>
-    
+
     <!-- Hotjar Tracking Code for emmanuelcsj.github.io -->
     <script>
         (function(h,o,t,j,a,r){
@@ -31,5 +31,10 @@
     <h1>
         Alow galera do separaê!
     </h1>
+    <h3>
+        <a href="pricing.html">
+            Produto
+        </a>
+    </h3>
 </body>
 </html>
