--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -34,6 +34,11 @@
     <h3>
         <a href="pricing.html">
             Produto
+        </a>
+    </h3>
+    <h3>
+        <a href="suport.html">
+            Suporte
         </a>
     </h3>
 </body>
