Changed noscript message

--- a/pricing.html
+++ b/pricing.html
@@ -18,7 +18,7 @@
             })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
         </script>
         <noscript>
-            Tá bugado, Berg! Usa outro browser.
+            Corre que tá bugado, Berg! Usa outro browser.
         </noscript>
 </head>
 <body>
