--- a/index.html
+++ b/index.html
@@ -41,5 +41,10 @@
             Suporte
         </a>
     </h3>
+    <h3>
+        <a href="form.html">
+            Formulário
+        </a>
+    </h3>
 </body>
 </html>
