--- a/form.html
+++ b/form.html
@@ -1,15 +1,1 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Formulário</title>
-</head>
-<body>
-    <header style="font-size: 40px">
-        Interessado(a) bb?
-    </header>
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeXwzVQvBmxM_XxdMHtoT2cOTQYpt3CBsv63mZM_yW-uorVfA/viewform?embedded=true" width="700" height="520" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
-</body>
-</html>
+<html> <head> <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"> <title>olá</title> <style type="text/css"> html{ margin: 0; height: 100%; overflow: hidden; } iframe{ position: absolute; left:0; right:0; bottom:0; top:0; border:0; } </style> </head> <body> <iframe id="typeform-full" width="100%" height="100%" frameborder="0" src="https://emmanuelcarreira.typeform.com/to/vMq8zD"></iframe> <script type="text/javascript" src="https://embed.typeform.com/embed.js"></script> </body> </html>
